--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,13 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=travelmania.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
 }
-
